Add API handler for periods
